Serialize container environment variable to json in docker-compose

--- a/derex/discovery/docker-compose-discovery.yml.j2
+++ b/derex/discovery/docker-compose-discovery.yml.j2
@@ -29,7 +29,7 @@ services:
       DJANGO_SETTINGS_MODULE: course_discovery.settings.derex_project.{{ active_settings }}
       MYSQL_DB_NAME: "{{ project.name }}_discovery"
       {%- for key, value in project.get_container_env().items() %}
-      {{ key }}: {{ value }}
+      {{ key }}: {{ value | tojson }}
       {%- endfor %}
     ports:
       - 4910:4910
